Fixed z-index issue

--- a/index.css
+++ b/index.css
@@ -38,7 +38,9 @@ body {
 }
 
 .container {
+	position: relative;
 	flex: 1;
+	z-index: 1;
 }
 
 .main {
@@ -59,7 +61,7 @@ body {
 	display: block;
 	width: 35%;
 	max-width: 400px;
-	z-index: -1;
+	z-index: 0;
 }
 
 span {
